# ai-qa-agent-platform

./: .env.example  .gitignore  GEMINI.md  IMPLEMENTATION_SUMMARY.md  QA_AUDIT_REPORT.md  README.md  frontend_test.html  minimal_backend.py  run_checks.sh  run_tests.sh  test_backend.py  test_system.py  validate_code.py  verify_system.sh
backend/: auth.py  config.py  logger.py  main.py  pyproject.toml  requirements.txt  schemas.py  websocket.py
backend/agent/: ai_client.py  analyzer.py  deduplicator.py  runner.py  submission.py  utest_client.py
backend/automation_tests/: test_example.py
backend/database/: core.py  models.py
backend/tests/: test_analyzer.py  test_main.py
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/: AuthContext.tsx  LoginForm.tsx
frontend/app/hooks/: useOffline.ts  useWebSocket.ts
frontend/public/: manifest.json  sw.js
test_venv/: pyvenv.cfg
